src/components/wiz/css/wizard-ui.css
/* ... */
.wui.container {
    box-shadow: 0 4px 15px rgba(0, 0, 0, .14);
    background-color: #fafafa;
    width: 770px;
    margin: auto;
    text-align: center;
    padding: 2rem 0 0 0;
    border-radius: 4px;
    z-index: 10;
    position: relative;
}

.wui.fullscreen {
    display: block;
}

.wui.widget.fullscreen {
}

.wui.carousel {
    display: flex;
    flex: 1;
    flex-direction: row;
    width: 100%;
}

.wui.carousel-slide {
    flex: 1 0 100%;
}

.wui.back-btn {
    position: absolute;
    height: 32px;
    width: 32px;
    padding: 0;
    border: none;
    cursor: pointer;
    background: url("https://images.ctfassets.net/64q0dihi81ut/3tHFB2sBxfpZNcUxQp9LGj/40fddd7d006b2e7a422baac1a9772375/back-button.svg") center center / contain no-repeat;
}

.wui.header {
    padding: 40px 40px 0;
    position: relative;
    display: flex;
    flex-direction: column;
}

@media (max-width: 767px) {
    .wui.header {
        flex-direction: column-reverse;
    }
}

.wui.header-title {
    font-family: "Noto Serif", sans-serif;
    font-size: 24px;
    line-height: 32px;
    margin: 0 38px 0;
    white-space: pre-line;
}

.wui.content-container {
    display: flex;
    flex-direction: row;
    -webkit-box-pack: center;
    justify-content: center;
    height: 100%;
    padding: 0 38px;
    flex-wrap: wrap;
}

@media (max-width: 767px) {
    .wui.content-container {
        flex-direction: column;
        min-height: 290px;
        padding-bottom: 10px;
        padding-top: 10px;
    }

    .wui.header-title {
        margin: 0;
        font-size: 20px;
        hyphens: manual;
    }
}

.wui.content {
    min-height: 355px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: trasnform 0.4s;
    transform: translateX(0%);
    position: relative;
    flex-wrap: wrap;
}

.wui.card {
    display: flex;
    flex: 1 1 0;
    padding: 6px;
}

.wui.card.small {
    height: 184px;
}

@media (max-width: 767px) {
    .wui.card {
        display: flex;
        flex: 1 1 0;
        padding: 5px;
        width: 100%;
    }

    .wui.content-container {
        width: 100%;
        padding: 0;
    }

    .wui.card-icon-container {
        visibility: hidden;
        display: none !important;
    }

    .wui.card-title {
        margin-top: 0 !important;
    }
}

@media (min-width: 768px) {
    .wui.card.container {
        flex-direction: column;
    }
}

.wui.card-container {
    border-radius: 4px;
    flex-direction: column;
    -webkit-box-align: center;
    align-items: center;
    background-color: #ffffff;
    box-shadow: rgba(0, 0, 0, 0.16) 4px 4px 18px;
    cursor: pointer;
    display: flex;
    font-size: 16px;
    hyphens: manual;
    -webkit-box-pack: center;
    justify-content: center;
    width: 100%;
    border-width: 4px;
    border-style: solid;
    border-color: #ffffff;
    outline: none;
    padding: 4px;
}

.wui.content-container.medium {
    min-height: 320px;
}

.wui.card-icon-container {
    -webkit-box-align: center;
    align-items: center;
    display: flex;
    padding: 4px;
    -webkit-box-pack: center;
    justify-content: center;
}

.wui.card-icon-img {
    display: block;
    height: 64px;
    width: 100%;
    max-width: 100px;
}

.wui.card-title {
    margin-top: 16px;
    font-family: "Noto Serif", sans-serif;
    word-break: break-all;
    hyphens: manual;
    line-height: normal;
    text-rendering: optimizeLegibility;
    text-align: center;
    -webkit-box-direction: normal;
    -webkit-font-smoothing: antialiased;
    -webkit-hyphens: manual !important;
}

.card-container:hover {
    border: #f2932c solid 3px;
}

.wui.footer {
    padding: 0 38px 38px;
    position: relative;
    margin-top: 8px;
}

.wui.footer-benefits {
    margin: 0 36px;
    display: flex;
}

.wui.benefits-group {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.wui.benefit {
    display: flex;
    color: #cfcfcd;
    align-items: center;
    text-align: left;
    margin-left: 8px;
    font-family: "Noto Serif", sans-serif;
    font-size: 13px;
    height: 44px;
    white-space: pre;
}

.wui.benefit-checkmark {
    margin-right: 4px;
    width: 10px;
}

.wui.benefit-title {
    word-wrap: break-spaces;
    margin: 0;
}

@media (min-width: 768px) {
    .wui.benefit-checkmark {
        margin-right: 10px;
    }
}

.wui.step-slider {
    display: flex;
    height: 100%;
    width: 100%;
    margin: 0 40px;
}

.wui.step-slider.paper {
    display: flex;
    -webkit-box-pack: justify;
    justify-content: space-between;
    flex-direction: row;
    margin: auto 0;
    padding: 60px 40px;
}

.wui.paper {
    background-color: white;
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.1) 5px 5px 20px;
    padding: 16px;
}

.wui.slider-measure {
    display: flex;
    flex-direction: column;
    -webkit-box-pack: justify;
    justify-content: space-between;
    width: 63%;
    margin-top: 16px;
}

.wui.slider-ctrl {
    display: flex;
    flex-direction: column;
    -webkit-box-pack: justify;
    justify-content: space-between;
    width: 34%;
}

.wui.slider-measure-input {
    text-align: left;
}

.wui.slider-measure-input-label {
    font-size: 15px;
}

.wui.slider-measure-input-styled {
    margin-top: 2px;
    height: 45px;
    position: relative;
}

.wui.slider-measure-input-styled-input {
    font-size: 16px;
    height: 100%;
    width: 100%;
    border: rgb(188, 188, 188) solid 1px;
    padding: 12px 16px;
}

.wui.slider-measure-input-styled-unit {
    color: rgb(170, 170, 170);
    font-size: 14px;
    position: absolute;
    right: 16px;
    top: 50%;
    transform: translateY(-50%);
}
/* ... */

